<resources>
    <string name="app_name">Retrofit</string>
    <string name="retrofit">Retrofit Library</string>
    <string name="action_settings">Settings</string>
    <string name="post_request">POST</string>
    <string name="get_request">GET</string>
    <string name="delete_request">DELETE</string>
    <string name="multi_body_request">Multi-body Upload</string>
    <string name="custom_converter">Custom Converter</string>
    <string name="response">Response:</string>
</resources>
